<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/rectangle_4"
        android:layout_margin="4dp">

    <ImageView
        android:id="@+id/bluetoothIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ibeacon"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/bluetooth_icon"
        />

    <LinearLayout
        android:id="@+id/parentLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/bluetoothIcon"
        android:layout_toStartOf="@id/distance">

    <LinearLayout
        android:id="@+id/uuidLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/uuidTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uuid"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/uuidTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/majorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/majorTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/majorTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/minorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/minorTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minor"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/minorTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    </LinearLayout>
            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/purple_500"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/emitSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="56dp"
            android:checked="false"
            android:layout_alignParentEnd="true"
            android:visibility="gone"/>


    </RelativeLayout>
</layout>