<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.ScannerFragment">

    <data>
        <variable
            name="sacnnerViewModel"
            type="com.example.beakonpoc.viewmodels.ScannerViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/grey">

        <TextView
            android:id="@+id/beaconTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:text="@string/beacon_scanner"
            android:textSize="32sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:textColor="@color/black"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/beaconRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/beaconTitle"
            android:layout_above="@+id/allBtnLayout"
            tools:listitem="@layout/item_beacon"
            android:background="@color/grey"/>

        <LinearLayout
            android:id="@+id/allBtnLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/grey">

                <Button
                    android:id="@+id/startScan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/start_scan"
                    android:backgroundTint="@color/purple_500"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/stopScan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/stop_scan"
                    android:backgroundTint="@color/purple_500"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</layout>